[package]
name = "nmle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytemuck = {version = "1.14.3", features = ["derive"]}
env_logger = "0.11.1"
instant = "0.1.12"
log = "0.4.20"
pollster = "0.3.0"
vek = {version = "0.16.1", features = ["bytemuck"]}
wgpu = {version = "0.19.1", features = ["spirv"]}
winit = "0.29.10"
