[package]
name = "nmle"
version = "0.1.0"
edition = "2024"

[lib]
name = "nmle_lib"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytemuck = {version = "1.24", features = ["derive"]}
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = {version = "0.33", default-features = false}
env_logger = "0.11.1"
instant = {version = "0.1", features = ["wasm-bindgen"]}
log = "0.4.20"
pollster = "0.3.0"
vek = {version = "0.16.1", features = ["bytemuck"]}
wgpu = {version = "27.0", features = ["spirv"]}
winit = {version = "0.30", default-features = false, features = ["rwh_06"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"]}